Complete full-stack portfolio application with backend authentication and frontend integration

--- a/my-app/Server/.env
+++ b/my-app/Server/.env
@@ -1,2 +1,2 @@
 MONGODB_URI=mongodb+srv://Ameesha:9PaV3vZKBo7RtfdX@cluster0.txikbe5.mongodb.net/Portfolio?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=yourSecretKey123
+JWT_SECRET=portfolio_app_jwt_secret_2024_ameesha_secure_key_@123!
